# Microsoft-Windows

./: file_.git_20260215153058.02.sfv  file_CheatEngine_20260215153058.09.sfv  file_LC2Cheats_20260215153058.69.sfv  file_LC2News_20260215153059.55.sfv  file_Lc2Rustube_20260215153059.68.sfv  file_doc_20260215153058.15.sfv  file_java_20260215153058.21.sfv  file_lc2-maven-plugin_20260215153058.37.sfv  file_lc2aiagent_20260215153058.43.sfv  file_lc2dir2json_20260215153058.81.sfv  file_lc2dl_20260215153058.88.sfv  file_lc2gitreadme_20260215153059.00.sfv  file_lc2import_json2sqlite_20260215153059.07.sfv  file_lc2ircclient_20260215153059.20.sfv  file_lc2memory_20260215153059.34.sfv  file_lc2nav2026_20260215153059.41.sfv  file_lc2sfv_20260215153059.85.sfv  file_test_20260215153100.18.sfv  files.md  readme.md
CPUUsageMonitor/: CPUUsageMonitor.sln  readme.md
CSP.Hash.Generator/: csp.bat  csp.php  index.html  readme.md
ChangePWD/: ChangePWD.cpp  ChangePWD.sln  ChangePWD.vcxproj  stdafx.cpp
CheatEngine/: README.md
LC2Android/: apk.html  readme.md
LC2AntiCrack/: README.md
LC2CRC32/: readme.md  test.bat  test.me.bat
LC2Cheats/: README.md
LC2DLFile2023/: Cargo.toml  test.bat
LC2FFMPEGEncoder/: EncoderSample.xml  FFLib.xml  LC2FFMPEGEncoder.xml
LC2FileEnDeCypter/: TestLC2FileEnDeCypter.exe.bat  readme.md
LC2Grep/: LC2Grep.dev  (+5 more)
lc2geocoder/server/: Cargo.toml  build.app.bat
lc2geocoder/server/src/: auth.rs  main.rs
lc2geocoder/server/src/web/: dashboard.html  login.html
lc2self-extract-rs/: Cargo.toml
lc2self-extract-rs/src/: lib.rs  loader.rs  packer.rs
(+985 files in other folders)
