[package]
name = "self-extract-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "packer"
path = "src/packer.rs"

[[bin]]
name = "app"
path = "src/loader.rs"

[dependencies]
zip = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tar = "0.4"
flate2 = "1.0"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
strip = true
